# ignis

./: .clang-format  .gitignore  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  Cargo.toml  README.md  default.nix  flake.nix  ignis.toml  shell.nix
crates/ignis/: Cargo.toml
crates/ignis/src/: cli.rs  init.rs  main.rs
crates/ignis/tests/: test_command.rs
crates/ignis_analyzer/: Cargo.toml
crates/ignis_analyzer/src/: binder.rs  borrowck.rs  borrowck_hir.rs  capture.rs  checks.rs  const_eval.rs  directive_registry.rs  directive_scheduler.rs  directive_vm.rs  dump.rs  escape.rs  generated.rs  imports.rs  lib.rs  lint.rs  lowering.rs  modules.rs  mono.rs  ownership_hir.rs  resolver.rs  scope.rs  typeck.rs
crates/ignis_analyzer/tests/: diagnostics.rs  directive_scheduler_runtime.rs  fixtures.rs  golden_err.rs  golden_hir.rs  golden_ok.rs  imports.rs  properties.rs
crates/ignis_ast/: Cargo.toml
crates/ignis_ast/src/: attribute.rs  display.rs  generics.rs  lib.rs  metadata.rs  pattern.rs  type_.rs
crates/ignis_codegen_c/: Cargo.toml
crates/ignis_codegen_c/src/: classify.rs  emit.rs  lib.rs  toolchain.rs
crates/ignis_codegen_c/tests/: gcc_validation.rs  golden_c.rs
crates/ignis_codegen_qbe/: Cargo.toml
crates/ignis_codegen_qbe/src/: emitter.rs  errors.rs  lib.rs  toolchain.rs
crates/ignis_data_type/: Cargo.toml
crates/ignis_data_type/src/: lib.rs  value.rs
crates/ignis_diagnostics/: Cargo.toml
crates/ignis_diagnostics/src/: diagnostic_report.rs  lib.rs  message.rs
crates/ignis_driver/: Cargo.toml
crates/ignis_driver/src/: api.rs  build_layout.rs  codegen_backend.rs  context.rs  lib.rs  link.rs  logging.rs  pipeline.rs  stages.rs
crates/ignis_driver/tests/: backend_boundary.rs  compile_time_directive_docs.rs  directive_representative_slices.rs  directive_scheduler_plan.rs  e2e_compile_directives.rs  e2e_err.rs  e2e_ok.rs  e2e_qbe.rs  native_test_runner.rs  runtime_memory.rs  std_compile_runtime_boundary.rs  std_serializer_runtime.rs  std_serializer_serialization_prereqs.rs  std_text_cursor.rs  std_toml_lexer.rs  utf8_contract_docs.rs
crates/ignis_formatter/: Cargo.toml
crates/ignis_formatter/src/: api.rs  comments.rs  config.rs  doc.rs  layout.rs  lib.rs  model.rs  printer.rs  safety.rs
crates/ignis_formatter/tests/: canonical_layout.rs  comments.rs  completeness.rs  config.rs  formatter_model.rs  readability_gate.rs  real_files.rs  safety.rs  type_layout.rs  verbatim.rs
crates/ignis_hir/: Cargo.toml
crates/ignis_hir/src/: display.rs  drop_schedule.rs  lib.rs  operation.rs  pattern.rs  statement.rs
crates/ignis_lir/: Cargo.toml
crates/ignis_lir/src/: block.rs  display.rs  instr.rs  lib.rs  operand.rs  program.rs  verify.rs
crates/ignis_lir/tests/: golden_lir.rs
crates/ignis_lsp/: Cargo.toml
crates/ignis_lsp/src/: at_items.rs  completion.rs  convert.rs  inlay.rs  lib.rs  project.rs  semantic.rs  server.rs  state.rs  type_format.rs
crates/ignis_parser/: Cargo.toml
crates/ignis_parser/src/: compile.rs  lib.rs
ignis/: Cargo.toml  main.ign
ignis-core/: Cargo.toml
ignis-core/src/: frontend.rs  lexer.rs  lib.rs
ignis-core/src/backend/: mod.rs
ignis-core/src/diagnostics/: diagnostic_report.rs  message.rs  mod.rs
ignis-core/src/frontend/: analyzer.rs  diagnostics.rs  lexer.rs  mod.rs  parser.rs
ignis-structures/ignis-data-type/: Cargo.toml
ignis-structures/ignis-data-type/src/: lib.rs  value.rs
ignis-structures/ignis-hir/: Cargo.toml
ignis-structures/ignis-hir/src/: hir_assign.rs  hir_binary.rs  hir_block.rs  hir_call.rs  hir_cast.rs  hir_comment.rs  hir_const.rs  hir_enum.rs  hir_for.rs  hir_for_of.rs  hir_function.rs  hir_function_instance.rs  hir_get.rs  hir_grouping.rs  hir_if.rs  hir_import.rs  hir_include.rs  hir_literal.rs  hir_logical.rs  hir_member_access.rs  hir_meta.rs  hir_method.rs  hir_method_call.rs  hir_namespace.rs  hir_object.rs  hir_record.rs  hir_return.rs  hir_set.rs  hir_source.rs  hir_spread.rs  hir_ternary.rs  hir_this.rs  hir_type.rs  hir_unary.rs  hir_value.rs  hir_variable.rs  hir_vector.rs  hir_vector_access.rs  hir_while.rs  lib.rs
ignis-structures/ignis-token/: Cargo.toml
ignis-structures/ignis-token/src/: token.rs  token_types.rs
ignis/analyzer/: binder.ign  binder_tests.ign  compound_type_tests.ign  definition_tests.ign  definitions.ign  id_determinism_tests.ign  ids.ign  imports.ign  imports_tests.ign  mod.ign  pipeline.ign  pipeline_tests.ign  resolver.ign  resolver_bodies.ign  resolver_bodies_tests.ign  resolver_tests.ign  symbol_tests.ign  symbols.ign  tests.ign  typecheck.ign  typecheck_exprs.ign  typecheck_items.ign  typecheck_state.ign  typecheck_stmts.ign  typecheck_tests.ign  types.ign
ignis/ast/: expressions.ign  ids.ign  items.ign  metadata.ign  mod.ign  module.ign  patterns.ign  serialize.ign  statements.ign  tests.ign  types.ign
ignis/ast/__snapshots__/: ast_3a_3atests_3a_3aastSerializerSnapshotIsDeterministicAndStable__ast-serializer-stable-module.snap.txt
ignis/config/: diagnostics.ign  mod.ign  project.ign  tests.ign
ignis/diagnostics/: codes.ign  compat.ign  compat_tests.ign  mod.ign  model.ign  model_tests.ign  render.ign  render_tests.ign  source.ign  source_tests.ign
ignis/diagnostics/__snapshots__/: diagnostics_3a_3acompat_tests_3a_3aparseExpectedDiagnosticsPreservesStructuredFields__compat-parsed-multi-label.snap.txt  (+4 more)
ignis/ids/: mod.ign
ignis/indexing/: mod.ign  tests.ign
ignis/interning/: mod.ign  tests.ign
ignis/lexer/: mod.ign  tests.ign
ignis/parser/: corpus_tests.ign  declarations.ign  expressions.ign  mod.ign  patterns.ign  recovery.ign  shared.ign  statements.ign  tests.ign  types.ign
ignis/src/: cli.rs  main.rs
ignis/symbols/: mod.ign  symbol_tests.ign
ignis/syntax/: cursor.ign  cursor_tests.ign  mod.ign  stream.ign  stream_tests.ign  token.ign  token_tests.ign
ignis_backend/: Cargo.toml
ignis_backend/bytecode_generator/: Cargo.toml
ignis_backend/bytecode_generator/src/: debug.rs  lib.rs
ignis_backend/src/: lib.rs
ignis_backend/to_c/: Cargo.toml
ignis_backend/to_lua/: Cargo.toml
(+976 files in other folders)
