[workspace]
resolver = "2"
members = [
  "ignis",
  "ignis-config",
  "ignis-core",
  "ignis-structures/ignis-ast",
  "ignis-structures/ignis-data-type", "ignis-structures/ignis-hir",
  "ignis-structures/ignis-token",
]
exclude = ["build"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.8.19"
colored = "2"
ignis-config = { path = "./ignis-config" }
ignis-token = { path = "./ignis-structures/ignis-token" }
ascii_table = "4.0.4"
ignis-data-type = { path = "./ignis-structures/ignis-data-type" }
ignis-ast = { path = "./ignis-structures/ignis-ast" }
ignis-hir = { path = "./ignis-structures/ignis-hir" }


[workspace.package]
authors = ["Ignacio Perez <ignacio.perez2123@protonmail.com>"]
description = "The Ignis programming language"
keywords = ["programming", "language", "compiler"]
license = "GPL-3.0"
repository = "https://github.com/Ignis-lang/ignis-lang"
version = "0.1.0"
