[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["build"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.8.19"
colored = "2"
ignis_config = { path = "crates/ignis_config" }
ignis_token = { path = "crates/ignis_token" }

[workspace.package]
authors = ["Ignacio Perez <ignacio@feuer.me>"]
description = "The Ignis programming language"
keywords = ["programming", "language", "compiler"]
license = "GPL-3.0"
repository = "https://github.com/Ignis-lang/ignis"
version = "0.1.0"
