[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["build"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.9.11"
colored = "3.1.1"
ignis_config = { path = "crates/ignis_config" }
ignis_log = { path = "crates/ignis_log" }
ignis_token = { path = "crates/ignis_token" }
bitflags = "2.10.0"
ordered-float = "5.1.0"
insta = { version = "1.40", features = ["yaml"] }
proptest = "1.5"
tempfile = "3.14"

[workspace.package]
authors = ["Ignacio Perez <ignacio@feuer.me>"]
description = "The Ignis programming language"
keywords = ["programming", "language", "compiler"]
license = "GPL-3.0"
repository = "https://github.com/Ignis-lang/ignis"
version = "0.2.4"
