[package]
name = "ignis-core"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis-config.workspace = true
ignis-token.workspace = true
colored.workspace = true
ascii_table.workspace = true
ignis-data-type.workspace = true
ignis-ast.workspace = true
ignis-hir.workspace = true
