[package]
name = "ignis"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
clap = { version = "4.5.20", features = ["derive", "color"] }
toml.workspace = true
serde_json.workspace = true
serde.workspace = true
colored.workspace = true
ignis_config.workspace = true
ignis_parser = { path = "../ignis_parser" }
ignis_token.workspace = true
