[package]
name = "ignis_analyzer"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_ast = { path = "../ignis_ast" }
ignis_type = { path = "../ignis_type" }
ignis_hir = { path = "../ignis_hir" }
ignis_diagnostics = { path = "../ignis_diagnostics" }
ordered-float.workspace = true
