[package]
name = "ignis_ast"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_token.workspace = true
ignis_type = { path = "../ignis_type"}
bitflags.workspace = true
