[package]
name = "ignis_codegen_c"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_config = { path = "../ignis_config" }
ignis_lir = { path = "../ignis_lir" }
ignis_type = { path = "../ignis_type" }
ignis_hir = { path = "../ignis_hir" }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
ignis_config = { path = "../ignis_config" }
ignis_parser = { path = "../ignis_parser" }
ignis_analyzer = { path = "../ignis_analyzer" }
ignis_diagnostics = { path = "../ignis_diagnostics" }
