[package]
name = "ignis_codegen_qbe"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_lir = { path = "../ignis_lir" }
ignis_type = { path = "../ignis_type" }
ignis_hir = { path = "../ignis_hir" }
ignis_codegen_c = { path = "../ignis_codegen_c" }
