[package]
name = "ignis_data_type"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_token.workspace = true
serde.workspace = true
serde_json.workspace = true
