[package]
name = "ignis_diagnostics"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
colored.workspace = true
ignis_token.workspace = true
ignis_type = { path = "../ignis_type"}
ignis_data_type = { path = "../ignis_data_type"}
