[package]
name = "ignis_driver"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_parser = { path = "../ignis_parser" }
ignis_analyzer = { path = "../ignis_analyzer" }
ignis_lir = { path = "../ignis_lir" }
ignis_diagnostics = { path = "../ignis_diagnostics" }
ignis_type = { path = "../ignis_type" }
ignis_ast = { path = "../ignis_ast" }
ignis_hir = { path = "../ignis_hir" }
ignis_config.workspace = true
colored.workspace = true
