[package]
name = "ignis_formatter"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ignis_ast = { path = "../ignis_ast" }
ignis_diagnostics = { path = "../ignis_diagnostics" }
ignis_parser = { path = "../ignis_parser" }
ignis_token = { path = "../ignis_token" }
ignis_type = { path = "../ignis_type" }
toml.workspace = true

[dev-dependencies]
insta.workspace = true
