[package]
name = "ignis_hir"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_token.workspace = true
ignis_type = { path = "../ignis_type" }
colored.workspace = true
ignis_diagnostics = { path = "../ignis_diagnostics" }
ignis_config.workspace = true
ignis_ast = { path = "../ignis_ast" }
