[package]
name = "ignis_lir"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_type = { path = "../ignis_type" }
ignis_hir = { path = "../ignis_hir" }
ordered-float.workspace = true

[dev-dependencies]
insta.workspace = true
ignis_parser = { path = "../ignis_parser" }
ignis_analyzer = { path = "../ignis_analyzer" }
ignis_diagnostics = { path = "../ignis_diagnostics" }
