[package]
name = "ignis_lsp"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_driver = { path = "../ignis_driver" }
ignis_diagnostics = { path = "../ignis_diagnostics" }
ignis_type = { path = "../ignis_type" }
ignis_config.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "sync", "rt"] }
url = "2"
