[package]
name = "ignis_parser"
edition = "2024"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis_token.workspace = true
colored.workspace = true
ignis_diagnostics = { path = "../ignis_diagnostics" }
ignis_config.workspace = true
