[package]
name = "ignis-data-type"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ignis-token.workspace = true
serde.workspace = true
serde_json.workspace = true
