[package]
name = "ignis-hir"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ignis-token.workspace = true
ignis-data-type.workspace = true
ignis-ast.workspace = true
