[package]
name = "to_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intermediate_representation = { path = "../../ignis_data_struct/intermediate_representation" }
code_result = { path = "../../ignis_data_struct/code_result" }
enums = { path = "../../ignis_common/enums" }

colored = "2"
